--- a/SpiderLarge/HomeViewController.xib
+++ b/SpiderLarge/HomeViewController.xib
@@ -8,6 +8,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="HomeViewController">
             <connections>
                 <outlet property="_addButton" destination="beq-Rk-qrv" id="wq6-2P-aGf"/>
+                <outlet property="_addFolder" destination="DEs-2i-NQn" id="gQh-SV-Lz5"/>
                 <outlet property="_proWindow" destination="Gyv-s6-Sid" id="kCh-aA-6Zt"/>
                 <outlet property="_toolBar" destination="ZoG-x6-wu0" id="Tmn-uB-X3I"/>
                 <outlet property="dragView" destination="2PC-fY-QDH" id="Bva-pa-Qhz"/>
@@ -23,11 +24,11 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2PC-fY-QDH" customClass="DragView">
-                    <rect key="frame" x="49" y="89" width="623" height="345"/>
+                    <rect key="frame" x="25" y="63" width="670" height="371"/>
                     <subviews>
                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="beq-Rk-qrv">
-                            <rect key="frame" x="0.0" y="0.0" width="623" height="345"/>
-                            <buttonCell key="cell" type="bevel" title="Click To Add Files" bezelStyle="regularSquare" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="aK1-d5-YTv">
+                            <rect key="frame" x="0.0" y="0.0" width="670" height="371"/>
+                            <buttonCell key="cell" type="bevel" title="Drag Folder Here Or  Click To Add Folder " bezelStyle="regularSquare" alignment="center" state="on" imageScaling="proportionallyDown" inset="2" id="aK1-d5-YTv">
                                 <behavior key="behavior" lightByContents="YES"/>
                                 <font key="font" metaFont="system"/>
                             </buttonCell>
@@ -38,7 +39,7 @@
                     </subviews>
                 </customView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9JA-bX-PJL">
-                    <rect key="frame" x="47" y="458" width="554" height="17"/>
+                    <rect key="frame" x="25" y="458" width="554" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Drag folder to this view or Click add folder button to start." id="33b-qc-jgu">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" red="0.84313725490196079" green="0.84313725490196079" blue="0.84313725490196079" alpha="0.84999999999999998" colorSpace="calibratedRGB"/>
@@ -53,6 +54,18 @@
                 </box>
                 <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZoG-x6-wu0" customClass="UIView">
                     <rect key="frame" x="0.0" y="0.0" width="720" height="48"/>
+                    <subviews>
+                        <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DEs-2i-NQn" customClass="AMCStrechableButton">
+                            <rect key="frame" x="25" y="10" width="160" height="28"/>
+                            <buttonCell key="cell" type="bevel" title="Add Folder To Start" bezelStyle="regularSquare" image="button_cl" imagePosition="overlaps" alignment="center" imageScaling="axesIndependently" inset="2" id="IL0-PU-oHV">
+                                <behavior key="behavior" lightByContents="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="clickAddButton:" target="-2" id="U1w-Pa-rLK"/>
+                            </connections>
+                        </button>
+                    </subviews>
                 </customView>
             </subviews>
             <point key="canvasLocation" x="583" y="554"/>
@@ -83,4 +96,7 @@
             <point key="canvasLocation" x="556.5" y="-19"/>
         </window>
     </objects>
+    <resources>
+        <image name="button_cl" width="100" height="28"/>
+    </resources>
 </document>
